Update author info

--- a/latex/CEUR/paper.tex
+++ b/latex/CEUR/paper.tex
@@ -57,9 +57,9 @@ twocolumn,
 \address[1]{Department of Engineering, University of Cambridge, Cambridge, CB2 1PZ United Kingdom}
 \address[2]{Department of Physics and Technology, UiT the Arctic University of Norway, P.O. box 6050 Langnes, NO-9037, Tromsø, Norway}
 
-\author[1]{A Nother}[orcid=0000-0000-0000-0000, email=another@vu.nl,]
+\author[1,2]{Andrea~Marinoni}[orcid=0000-0001-6789-0915, email=andrea.marinoni@uit.no,]
 
-\author[1]{A Nother}[orcid=0000-0000-0000-0000,email=another@acm.org,]
+\author[1]{Sivasakthy~Selvakumaran}[orcid=0000-0002-8591-0702,email=ss683@cam.ac.uk,]
 
 % The abstract is a short summary of the work to be presented in the article.
 \begin{abstract}
