Added references where Andrea suggested

--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -213,3 +213,62 @@ address = {Sydney, Australia},
 series = {Proc. Mach. Learn. Res.}, 
 month = {06--11 Aug}
 }
+
+@ARTICLE{Chlaily2021,
+author={Chlaily, Saloua and Mura, Mauro Dalla and Chanussot, Jocelyn and Jutten, Christian and Gamba, Paolo and Marinoni, Andrea},
+journal={IEEE Transactions on Geoscience and Remote Sensing},
+title={Capacity and Limits of Multimodal Remote Sensing: Theoretical Aspects and Automatic Information Theory-Based Image Selection},
+year={2021},
+volume={59},
+number={7},
+pages={5598-5618},
+doi={10.1109/TGRS.2020.3014138}
+}
+
+@article{Marinoni2021,
+author={Andrea Marinoni and Saloua Chlaily and Eduard Khachatrian and Torbj{\o}rn Eltoft and Sivasakthy Selvakumaran and Mark Girolami and Christian Jutten},
+title={Enhancing ensemble learning and transfer learning in multimodal data analysis by adaptive dimensionality reduction},
+journal={CoRR},
+volume={abs/2105.03682},
+year={2021},
+url={https://arxiv.org/abs/2105.03682},
+archivePrefix={arXiv},
+eprint={2105.03682},
+timestamp={Fri, 14 May 2021 12:13:30 +0200},
+biburl={https://dblp.org/rec/journals/corr/abs-2105-03682.bib},
+bibsource={dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Lee2004,
+author={John D. Lee and Katrina A. See},
+title={Trust in Automation: Designing for Appropriate Reliance},
+journal={Human Factors},
+volume={46},
+number={1},
+pages={50-80},
+year={2004},
+doi={10.1518/hfes.46.1.50\_30392},
+note={PMID: 15151155},
+URL={https://doi.org/10.1518/hfes.46.1.50_30392},
+eprint={https://doi.org/10.1518/hfes.46.1.50_30392}
+}
+
+@article{Chi2016,
+title={Big data for remote sensing: Challenges and opportunities},
+author={Chi, Mingmin and Plaza, Antonio and Benediktsson, Jon Atli and Sun, Zhongyi and Shen, Jinsheng and Zhu, Yangyong},
+journal={Proceedings of the IEEE},
+volume={104},
+number={11},
+pages={2207--2219},
+year={2016},
+publisher={IEEE}
+}
+
+@inproceedings{Chakraborty2017,
+title={Interpretability of deep learning models: A survey of results},
+author={Chakraborty, Supriyo and Tomsett, Richard and Raghavendra, Ramya and Harborne, Daniel and Alzantot, Moustafa and Cerutti, Federico and Srivastava, Mani and Preece, Alun and Julier, Simon and Rao, Raghuveer M and others},
+booktitle={2017 IEEE smartworld, ubiquitous intelligence \& computing, advanced \& trusted computed, scalable computing \& communications, cloud \& big data computing, Internet of people and smart city innovation (smartworld/SCALCOM/UIC/ATC/CBDcom/IOP/SCI)},
+pages={1--6},
+year={2017},
+organization={IEEE}
+}
