--- a/latex/CEUR/paper.tex
+++ b/latex/CEUR/paper.tex
@@ -45,10 +45,10 @@ twocolumn,
   International (CC BY 4.0).}
 
 % This command is for the conference information
-\conference{Proceedings of the CIKM 2021 Workshops, November 01--05, 2021, Online}
+\conference{Proceedings of the CIKM 2021 Workshops, November 1-5, Online}
 
 % The "title" command
-\title{Uncertainty-aware graph-based multimodal remote sensing classification}
+\title{Uncertainty-aware graph-based multimodal remote sensing}
 
 % The "author" command and its associated commands are used to define
 % the authors and their affiliations.
@@ -87,16 +87,16 @@ The results presented in this paper show that the measures of uncertainty provid
 \section{Introduction}
 The capability of algorithms to provide accurate measures of confidence and uncertainty is important if they are to be adopted in real-world scenarios where the stakes can be high \cite{Goodman2017}.
 Although deep learning methods are often capable of producing high-accuracy predictions \cite{LeCun2015, LiangpeiZhang2016}, they are generally criticized for being unable to express when to have confidence in the prediction and when the prediction should be presented as uncertain.
-If deep learning models are to be integrated reliably into real-world decision making processes, it is of vital importance that the methods being used are capable of accurately expressing uncertainty.
+If deep learning models are to be integrated reliably into real-world decision making processes, it is of vital importance that the methods being used are capable of accurately expressing uncertainty \cite{Lee2004}.
 
-With remotely-sensed data being available with ever-greater temporal and spatial resolutions, the development of computational processing methods which are capable of robustly handling such large volumes of data will assist countless earth-monitoring applications.
-Specifically, with data being captured now using a wide range of capturing techniques with complementary strengths, the ability to combine this data into a multimodal analysis will allow each data mode to interact synergistically to provide better results than any individual data mode would produce in isolation.
-Each data capturing technique will naturally have its own strengths and weaknesses, inherent to the physically properties of the sensing mode.
+With remotely-sensed data being available with ever-greater temporal and spatial resolutions, the development of computational processing methods which are capable of robustly handling such large volumes of data will assist countless earth-monitoring applications \cite{Chi2016}.
+Specifically, with data being captured now using a wide range of techniques with complementary strengths, the ability to combine this data into a multimodal analysis will allow each data mode to interact synergistically to provide better results than any individual data mode would produce in isolation.
+Each data capturing technique will naturally have its own strengths and weaknesses, inherent to the physical properties of the sensing mode \cite{Chlaily2021, Marinoni2021}.
 Deterministic classification, while useful, is held back by its inability to express uncertainty.
 Adoption of such techniques will always be limited by the adopter's trust in the predictions.
-Uncertainty estimates, however, will greatly assist human trust in models, as it will provide a quantification of confidence that might indicate when a prediction is not to be trusted, and more importantly, when a prediction is given with great certainty.
+Uncertainty estimates, however, will greatly assist human trust in models, as it will provide a quantification of confidence that might indicate when a prediction is not to be trusted, and more importantly, when a prediction is given with great certainty \cite{Chakraborty2017}.
 
-In this paper, we have analyzed how well different measures of model uncertainty perform the task of identifying misclassifications, as well as whether they can be used to identify data points which belong from a distribution other than those observed during training (out of distribution detection).
+In this paper, we have analyzed how well different measures of model uncertainty perform the task of identifying data points which belong from a distribution other than those observed during training (out of distribution detection).
 To do so, we have used graph-based neural network architectures that are adapted to provide subjective opinions (as described in the field of belief or evidence theory \cite{Josang2018}) through the use of Dirichlet distribution parameterizations \cite{Kipf2017, ZhaoXujiang2020}.
 Adopting such a method for performing multimodal classification of remote sensing data is, to the best of our knowledge, an as-yet untested approach.
 The performance of the adopted technique represents a promising avenue in the search for meaningful uncertainty estimates when performing multimodal remote sensing classification.
@@ -106,8 +106,8 @@ The remainder of this paper is organized as follows: Section \ref{sec::unc_frame
 \section{Uncertainty framework}
 \label{sec::unc_framework}
 
-The framework described in this section is the same as is described by the work of \cite{ZhaoXujiang2020} where they use the approach to perform semi-supervised classification of benchmark graph classification datasets including Cora and Pubmed.
-The method they present has been adapted here to perform the task of multimodal remote sensing classification.
+% The framework described in this section is the same as is described by the work of \cite{ZhaoXujiang2020} where they use the approach to perform semi-supervised classification of benchmark graph classification datasets including Cora and Pubmed.
+% The method they present has been adapted here to perform the task of multimodal remote sensing classification.
 
 \subsection{Subjective Logic}
 Subjective Logic (SL), takes an evidence-based approach to decision making \cite{Josang2016}.
@@ -173,16 +173,16 @@ The total entropy, made up of both aleatoric and epistemic uncertainty \cite{Dep
     \mathcal{H}\left(\mathbb{E}_{p(\boldsymbol{\theta}\vert \mathcal{D})}\left[p(y\vert x;\boldsymbol{\theta}\right]\right),
 \end{equation}
 where $\mathcal{H}()$ computes the differential entropy of a distribution.
-Aleatoric uncertainty, which accounts for noise inherent to the data observations \cite{Kendall2017}, is given by
-\begin{equation}
-    \mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right].
-\end{equation}
-The epistemic uncertainty, therefore, is given by the difference between these two quantities
-\begin{equation}
-    \mathcal{H}\left(\mathbb{E}_{p(\boldsymbol{\theta}\vert \mathcal{D})}\left[p(y\vert x;\boldsymbol{\theta}\right]\right)-\mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right].
-\label{eq::epistemic}
-\end{equation}
-In order to compute the above expressions for aleatoric and epistemic uncertainty, the posterior distribution over models is approximated by samples obtained using dropout inference \cite{Gal2016}.
+% Aleatoric uncertainty, which accounts for noise inherent to the data observations \cite{Kendall2017}, is given by
+% \begin{equation}
+%     \mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right].
+% \end{equation}
+% The epistemic uncertainty, therefore, is given by the difference between these two quantities
+% \begin{equation}
+%     \mathcal{H}\left(\mathbb{E}_{p(\boldsymbol{\theta}\vert \mathcal{D})}\left[p(y\vert x;\boldsymbol{\theta}\right]\right)-\mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right].
+% \label{eq::epistemic}
+% \end{equation}
+% In order to compute the above expressions for aleatoric and epistemic uncertainty, the posterior distribution over models is approximated by samples obtained using dropout inference \cite{Gal2016}.
 
 \section{Graph network architecture}
 \label{sec::GraphNetworkArchitecture}
@@ -291,6 +291,9 @@ The graph edges are computed using a $k$-nearest neighbors algorithm with two no
 This produces a graph which is both undirected and unweighted.
 The graph, which contains approximately 2.16 million nodes, was computed with $k=15$.
 
+In order to measure an uncertainty output's ability to separate misclassifications, a receiver operating characteristic (ROC) curve and a precision-recall (PR) curve can be computed.
+The area under the ROC curve and PR curve (AUROC and AUPR respectively) can be used as a single numerical representation of the detection performance, where an area of $1.0$ would represent a perfect discriminator for both metrics.
+
 % The exact types and abundances of these classes can be found in Table \ref{tab::classes}.
 % The classes which do not appear in the subsection of the dataset but exist within the wider GT are included for completeness.
 
@@ -365,61 +368,60 @@ If stopped early, model weights were returned to the settings which provided the
 
 Each test was performed for different random dataset splits and model weight initializations to obtain mean and standard deviation measures of performance.
 
-Benchmark models presented include the `vanilla' GCN (which can provide uncertainty via entropy) and the Drop-GCN which is a GCN where dropout inference has been applied to produce estimates of aleatoric and epistemic uncertainty in addition to entropy.
-
-\begin{table*}[!t]
-\renewcommand{\arraystretch}{1.3}
-\caption{Misclassification detection: Ability of each uncertainty type to detect misclassifications (measured by AUROC and AUPR).}
-\label{tab::misc_auroc}
-\scriptsize
-\begin{center}
-\begin{tabular}{Y|ccccc|ccccc}
-\hline
-\multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUROC}\vline&\multicolumn{5}{c}{AUPR}        \\
-                        & Vac. & Dis. & Ale. & Epi. & Ent. & Vac. & Dis. & Ale. & Epi. & Ent. \\ \hline 
-% S-BGCN-T-K (superpixel prior) & $0.676$ & $0.801$ &$0.792$&$0.509$&$0.798$&$0.352$&$0.398$&$0.467$&$0.237$&$0.474$    \\
-S-BGCN-T-K  & $0.908$ & $0.840$ &$0.905$&$0.451$&$\mathbf{0.912}$&$0.659$&$0.545$&$0.649$&$0.206$&$\mathbf{0.672}$  \\
-S-BGCN-T & $0.729$ & $0.834$ &$0.869$&$0.618$&$0.861$&$0.451$&$0.484$&$0.591$&$0.278$&$0.579$  \\ 
-S-BGCN & $0.760$ & $0.877$ &$0.894$&$0.623$&$0.886$&$0.489$&$0.558$&$0.633$&$0.268$&$0.616$  \\ 
-S-GCN & $0.729$ & $0.842$ &-&-&$0.859$&$0.472$&$0.538$&-&-&$0.595$  \\ 
-S-MLP &$0.845$&$0.904$&-&-&$0.909$&$0.417$&$0.566$&-&-&$0.606$  \\
-GCN & - & - &-&-&$0.887$&-&-&-&-&$0.606$  \\ 
-Drop-GCN & - & - &$0.897$&$0.552$&$0.887$&-&-&$0.619$&$0.243$&$0.600$  \\ \hline
-\end{tabular}
-\end{center}
-\end{table*}
-
-\subsection{Misclassification detection}
-
-Given that model uncertainties should provide a measure of the confidence which can be had about a model's predictions, a worthwhile estimate of uncertainty should be able to distinguish model misclassifications from accurate classifications.
-In order to measure an uncertainty output's ability to separate misclassifications, a receiver operating characteristic (ROC) curve and a precision-recall (PR) curve can be computed.
-The area under the ROC curve and PR curve (AUROC and AUPR respectively) can be used as a single numerical representation of the detection performance, where an area of $1.0$ would represent a perfect discriminator for both metrics.
-
-Models of each type described (as well as benchmark models) were trained and their outputs analyzed to produce the AUROC and AUPR values seen in Table \ref{tab::misc_auroc}.
+Benchmark models presented include the `standard' GCN (which can provide uncertainty via entropy) and the Drop-GCN which is a GCN where dropout inference has been applied to produce estimates of aleatoric and epistemic uncertainty in addition to entropy.
 
 % \begin{table*}[!t]
 % \renewcommand{\arraystretch}{1.3}
-% \caption{Misclassification detection: Ability of each uncertainty type to detect misclassifications (measured by the AUPR metric).}
-% \label{tab::misc_aupr}
+% \caption{Misclassification detection: Ability of each uncertainty type to detect misclassifications (measured by AUROC and AUPR).}
+% \label{tab::misc_auroc}
 % \scriptsize
 % \begin{center}
-% \begin{tabular}{cccccc}
+% \begin{tabular}{Y|ccccc|ccccc}
 % \hline
-% \multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUPR}             \\
-%       & Vac. & Dis. & Ale. & Epi. & Ent. \\ \hline 
-% S-BGCN-T-K (superpixel prior) & $0.352$&$0.398$&$0.467$&$0.237$&$0.474$ \\
-% S-BGCN-T-K (pixel prior) & $0.659$&$0.545$&$0.649$&$0.206$&$\mathbf{0.672}$ \\
-% S-BGCN-T & $0.451$&$0.484$&$0.591$&$0.278$&$0.579$ \\ 
-% S-BGCN & $0.489$ & $0.558$  &$0.633$&$0.268$&$0.616$ \\ 
-% S-GCN & $0.472$ & $0.538$  &-&-&$0.595$ \\ 
-% S-MLP & $0.417$&$0.566$&-&-&$0.616$ \\
-% GCN & - & -  &-&-&$0.606$ \\ 
-% Drop-GCN & - & -  & $0.619$&$0.243$&$0.600$ \\ \hline
+% \multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUROC}\vline&\multicolumn{5}{c}{AUPR}        \\
+%                         & Vac. & Dis. & Ale. & Epi. & Ent. & Vac. & Dis. & Ale. & Epi. & Ent. \\ \hline 
+% % S-BGCN-T-K (superpixel prior) & $0.676$ & $0.801$ &$0.792$&$0.509$&$0.798$&$0.352$&$0.398$&$0.467$&$0.237$&$0.474$    \\
+% S-BGCN-T-K  & $0.908$ & $0.840$ &$0.905$&$0.451$&$\mathbf{0.912}$&$0.659$&$0.545$&$0.649$&$0.206$&$\mathbf{0.672}$  \\
+% S-BGCN-T & $0.729$ & $0.834$ &$0.869$&$0.618$&$0.861$&$0.451$&$0.484$&$0.591$&$0.278$&$0.579$  \\ 
+% S-BGCN & $0.760$ & $0.877$ &$0.894$&$0.623$&$0.886$&$0.489$&$0.558$&$0.633$&$0.268$&$0.616$  \\ 
+% S-GCN & $0.729$ & $0.842$ &-&-&$0.859$&$0.472$&$0.538$&-&-&$0.595$  \\ 
+% S-MLP &$0.845$&$0.904$&-&-&$0.909$&$0.417$&$0.566$&-&-&$0.606$  \\
+% GCN & - & - &-&-&$0.887$&-&-&-&-&$0.606$  \\ 
+% Drop-GCN & - & - &$0.897$&$0.552$&$0.887$&-&-&$0.619$&$0.243$&$0.600$  \\ \hline
 % \end{tabular}
 % \end{center}
 % \end{table*}
 
-The S-BGCN-T-K model achieves the best misclassification detection performance, with the uncertainty measured by entropy providing the best distinguishing metric, with AUROC and AUPR of $0.912$ and $0.672$ respectively, closely followed by the performance achieved by the measures of vacuity (AUROC and AUPR of $0.908$ and $0.659$ respectively) and aleatoric uncertainty (AUROC and AUPR of $0.905$ and $0.649$ respectively).
+% \subsection{Misclassification detection}
+% 
+% Given that model uncertainties should provide a measure of the confidence which can be had about a model's predictions, a worthwhile estimate of uncertainty should be able to distinguish model misclassifications from accurate classifications.
+% 
+% 
+% Models of each type described (as well as benchmark models) were trained and their outputs analyzed to produce the AUROC and AUPR values seen in Table \ref{tab::misc_auroc}.
+% 
+% % \begin{table*}[!t]
+% % \renewcommand{\arraystretch}{1.3}
+% % \caption{Misclassification detection: Ability of each uncertainty type to detect misclassifications (measured by the AUPR metric).}
+% % \label{tab::misc_aupr}
+% % \scriptsize
+% % \begin{center}
+% % \begin{tabular}{cccccc}
+% % \hline
+% % \multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUPR}             \\
+% %       & Vac. & Dis. & Ale. & Epi. & Ent. \\ \hline 
+% % S-BGCN-T-K (superpixel prior) & $0.352$&$0.398$&$0.467$&$0.237$&$0.474$ \\
+% % S-BGCN-T-K (pixel prior) & $0.659$&$0.545$&$0.649$&$0.206$&$\mathbf{0.672}$ \\
+% % S-BGCN-T & $0.451$&$0.484$&$0.591$&$0.278$&$0.579$ \\ 
+% % S-BGCN & $0.489$ & $0.558$  &$0.633$&$0.268$&$0.616$ \\ 
+% % S-GCN & $0.472$ & $0.538$  &-&-&$0.595$ \\ 
+% % S-MLP & $0.417$&$0.566$&-&-&$0.616$ \\
+% % GCN & - & -  &-&-&$0.606$ \\ 
+% % Drop-GCN & - & -  & $0.619$&$0.243$&$0.600$ \\ \hline
+% % \end{tabular}
+% % \end{center}
+% % \end{table*}
+% 
+% The S-BGCN-T-K model achieves the best misclassification detection performance, with the uncertainty measured by entropy providing the best distinguishing metric, with AUROC and AUPR of $0.912$ and $0.672$ respectively, closely followed by the performance achieved by the measures of vacuity (AUROC and AUPR of $0.908$ and $0.659$ respectively) and aleatoric uncertainty (AUROC and AUPR of $0.905$ and $0.649$ respectively).
 
 \subsection{Out of distribution detection}
 
@@ -431,53 +433,53 @@ Using the same approach as described for misclassification detection, the AUROC 
 In the results presented, two classes were randomly selected to act as OOD.
 This was repeated 10 times, with two new randomly sampled classes selected for each training and evaluation loop in order that the variation in OOD detection performance due to the nature of the classes selected as OOD could be averaged out and the mean and standard deviation computed.
 Each model type was assessed over the same 10 sampled OOD class pairs for fairness.
-The AUROC and AUPR values measured can be found in Table \ref{tab::ood_auroc} and Table \ref{tab::ood_aupr} respectively.
+The AUROC and AUPR values measured can be found in Table \ref{tab::ood}.
 
 \begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
-\caption{OOD detection: Ability of each uncertainty type to detect OOD nodes (measured by the AUROC metric). Values shown represent the mean $\pm$ standard deviation.}
-\label{tab::ood_auroc}
+\caption{OOD detection: Ability of each uncertainty type to detect OOD nodes (measured by the AUROC and AUPR metrics). Values shown represent the mean $\pm$ standard deviation.}
+\label{tab::ood}
 \scriptsize
 \begin{center}
-\begin{tabular}{Y|ccccc}
+\begin{tabular}{Y|ccc|ccc}
 \hline
-\multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUROC}             \\
-      & Vacuity & Dissonance & Aleatoric & Epistemic & Entropy \\ \hline 
+\multirow{2}{*}{Model}  & \multicolumn{3}{c|}{AUROC} & \multicolumn{3}{c}{AUPR} \\
+                        & Vacuity & Dissonance & Entropy & Vacuity & Dissonance & Entropy\\ \hline 
 % S-BGCN-T-K (superpixel prior) & $0.839\pm0.092$ & $0.691\pm0.173$ &$0.831\pm0.079$&$0.268\pm0.180$&$0.833\pm0.076$    \\           
-S-BGCN-T-K & $\mathbf{0.882\pm0.085}$ & $0.605\pm0.197$ &$0.877\pm0.089$&$0.193\pm0.107$&$0.878\pm0.089$    \\        
-S-BGCN-T & $0.588\pm0.147$ & $0.664\pm0.133$ &$0.593\pm0.188$&$0.396\pm0.096$&$0.578\pm0.186$    \\ 
-S-BGCN & $0.586\pm0.147$ & $0.666\pm0.132$ &$0.596\pm0.193$&$0.401\pm0.092$&$0.580\pm0.191$    \\ 
-S-GCN & $0.580\pm0.145$ & $0.650\pm0.120$ &-&-&$0.586\pm0.181$    \\ 
-S-MLP & $0.767\pm0.152$ & $0.805\pm0.114$ &-&-&$0.787\pm0.125$    \\   
-GCN & - & - &-&-&$0.538\pm0.188$    \\ 
-Drop-GCN & - & - &$0.541\pm0.185$&$0.420\pm0.161$&$0.538\pm0.187$    \\ \hline
+S-BGCN-T-K & $\mathbf{0.882\pm0.085}$ & $0.605\pm0.197$ & $0.878\pm0.089$ & $\mathbf{0.318\pm0.289}$ & $0.132\pm0.184$ & $0.316\pm0.306$  \\        
+S-BGCN-T & $0.588\pm0.147$ & $0.664\pm0.133$ & $0.578\pm0.186$ & $0.128\pm0.187$ & $0.137\pm0.192$ & $0.143\pm0.208$   \\ 
+S-BGCN & $0.586\pm0.147$ & $0.666\pm0.132$ & $0.580\pm0.191$ & $0.127\pm0.186$ & $0.139\pm0.190$ & $0.145\pm0.209$  \\ 
+S-GCN & $0.580\pm0.145$ & $0.650\pm0.120$ & $0.586\pm0.181 $ & $0.125\pm0.185$ & $0.130\pm0.191$ & $0.143\pm0.207$   \\ 
+S-MLP & $0.767\pm0.152$ & $0.805\pm0.114$ & $0.787\pm0.125$ & $0.245\pm0.214$ & $0.233\pm0.170$ & $0.219\pm0.201$   \\   
+GCN & - & - & $0.538\pm0.188$ & - & - & $0.116\pm0.179$  \\ 
+Drop-GCN & - & - & $0.538\pm0.187$ & - & - & $0.116\pm0.179$  \\ \hline
 \end{tabular}
 \end{center}
 \end{table*}
 
-\begin{table*}[!t]
-\renewcommand{\arraystretch}{1.3}
-\caption{OOD detection: Ability of each uncertainty type to detect OOD nodes (measured by the AUPR metric). Values shown represent the mean $\pm$ standard deviation.}
-\label{tab::ood_aupr}
-\scriptsize
-\begin{center}
-\begin{tabular}{Y|ccccc}
-\hline
-\multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUPR}             \\
-      & Vacuity & Dissonance & Aleatoric & Epistemic & Entropy \\ \hline 
-% S-BGCN-T-K (superpixel prior) &$0.234\pm0.252$&$0.142\pm0.185$&$0.214\pm0.249$&$0.099\pm0.227$&$0.212\pm0.251$    \\   
-S-BGCN-T-K &$\mathbf{0.318\pm0.289}$&$0.132\pm0.184$&$0.316\pm0.306$&$0.082\pm0.178$&$0.316\pm0.306$    \\        
-S-BGCN-T &$0.128\pm0.187$&$0.137\pm0.192$&$0.148\pm0.211$&$0.095\pm0.193$&$0.143\pm0.208$    \\ 
-S-BGCN & $0.127\pm0.186$ & $0.139\pm0.190$  &$0.150\pm0.213$&$0.095\pm0.195$&$0.145\pm0.209$    \\ 
-S-GCN & $0.125\pm0.185$ & $0.130\pm0.191$  &-&-&$0.143\pm0.207$    \\ 
-S-MLP & $0.245\pm0.214$ & $0.233\pm0.170$ &-&-&$0.219\pm0.201$    \\   
-GCN & - & -  &-&-&$0.116\pm0.179$    \\ 
-Drop-GCN & - & -  & $0.116\pm0.179$&$0.115\pm0.257$&$0.116\pm0.179$    \\ \hline
-\end{tabular}
-\end{center}
-\end{table*}
+% \begin{table*}[!t]
+% \renewcommand{\arraystretch}{1.3}
+% \caption{OOD detection: Ability of each uncertainty type to detect OOD nodes (measured by the AUPR metric). Values shown represent the mean $\pm$ standard deviation.}
+% \label{tab::ood_aupr}
+% \scriptsize
+% \begin{center}
+% \begin{tabular}{Y|ccccc}
+% \hline
+% \multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUPR}             \\
+%       & Vacuity & Dissonance & Aleatoric & Epistemic & Entropy \\ \hline 
+% % S-BGCN-T-K (superpixel prior) &$0.234\pm0.252$&$0.142\pm0.185$&$0.214\pm0.249$&$0.099\pm0.227$&$0.212\pm0.251$    \\   
+% S-BGCN-T-K &$\mathbf{0.318\pm0.289}$&$0.132\pm0.184$&$0.316\pm0.306$&$0.082\pm0.178$&$0.316\pm0.306$    \\        
+% S-BGCN-T &$0.128\pm0.187$&$0.137\pm0.192$&$0.148\pm0.211$&$0.095\pm0.193$&$0.143\pm0.208$    \\ 
+% S-BGCN & $0.127\pm0.186$ & $0.139\pm0.190$  &$0.150\pm0.213$&$0.095\pm0.195$&$0.145\pm0.209$    \\ 
+% S-GCN & $0.125\pm0.185$ & $0.130\pm0.191$  &-&-&$0.143\pm0.207$    \\ 
+% S-MLP & $0.245\pm0.214$ & $0.233\pm0.170$ &-&-&$0.219\pm0.201$    \\   
+% GCN & - & -  &-&-&$0.116\pm0.179$    \\ 
+% Drop-GCN & - & -  & $0.116\pm0.179$&$0.115\pm0.257$&$0.116\pm0.179$    \\ \hline
+% \end{tabular}
+% \end{center}
+% \end{table*}
 
-As for the task of misclassification detection, the S-BGCN-T-K model is the highest ranked model.
+For the task of OOD detection, the S-BGCN-T-K model is the highest ranked model.
 Its measure of vacuity uncertainty provided the best distinguishing metric, with mean AUROC and AUPR of $0.882$ and $0.318$ respectively, closely followed by performance from the measures of entropy (AUROC and AUPR of $0.878$ and $0.316$ respectively) and aleatoric uncertainty (AUROC and AUPR of $0.877$ and $0.316$ respectively).
 The performance of the S-BGCN-T-K model stands out above the performance of other models trained.
 This highlights the importance of the convergence assistance techniques used, particularly the use of a meaningful prior.
@@ -489,24 +491,24 @@ Since vacuity measures the absence of evidence for a prediction, it is natural t
 \label{sec::conclusion}
 
 In this paper we have adapted a novel classification method capable of providing uncertainty estimates to the task of multi-class classification of multimodal remote sensing data.
-The adopted framework, based upon the theory of Subjective Logic, provides measures of vacuity and dissonance which are better capable of identifying misclassifications and out of distribution samples than the alternative probabilistic measures of uncertainty assessed.
-Experimental results have shown the performance of the S-BGCN-T-K model in the tasks of misclassification and OOD detection to be improved against baseline methods.
+The adopted framework, based upon the theory of Subjective Logic, provides measures of vacuity and dissonance which are better capable of identifying out of distribution samples than the alternative probabilistic measures of uncertainty assessed.
+Experimental results have shown the performance of the S-BGCN-T-K model for OOD detection to be improved against baseline methods.
 This represents a promising avenue for uncertainty-aware learning in the task of multimodal remote sensing classification.
 
 The presented results illustrate the importance of convergence assistance techniques as a means for improving the quality of uncertainty estimates, particularly through the use of a prior.
-This can be seen by comparing the S-BGCN-T-K misclassification detection and OOD detection performance with equivalent models which do not use a prior, e.g. S-BGCN-T.
-Of the uncertainty measures produced by the S-BGCN-T-K model, the measures of vacuity, aleatoric uncertainty or entropy all provide near-best performance for the identifying misclassifications.
+This can be seen by comparing the S-BGCN-T-K OOD detection performance with equivalent models which do not use a prior, e.g. S-BGCN-T.
+% Of the uncertainty measures produced by the S-BGCN-T-K model, the measures of vacuity, aleatoric uncertainty or entropy all provide near-best performance for the identifying misclassifications.
 In order to identify OOD nodes, the measure of vacuity stands out as the best-performing uncertainty metric.
 
 Future work should consider the generalisation potential of this method by assessing performance on other challenging remote sensing classification datasets.
 There is also scope for research into how the choice of method for computing the $\hat{\boldsymbol{\alpha}}$ prior affects the quality of uncertainty estimates, either by varying the scale parameter, $\sigma$, or considering different prior computation methods entirely.
-%% The acknowledgments section is defined using the "acknowledgments" environment
-%% (and NOT an unnumbered section). This ensures the proper
-%% identification of the section in the article metadata, and the
-%% consistent spelling of the heading.
-% \begin{acknowledgments}
-%   Thanks to ...
-% \end{acknowledgments}
+% The acknowledgments section is defined using the "acknowledgments" environment
+% (and NOT an unnumbered section). This ensures the proper
+% identification of the section in the article metadata, and the
+% consistent spelling of the heading.
+\begin{acknowledgments}
+This work is funded in part by Centre for Integrated Remote Sensing and Forecasting for Arctic Operations (CIRFA) and the Research Council of Norway (RCN Grant no. 237906), the Automatic Multisensor remote sensing for Sea Ice Characterization (AMUSIC) Framsenteret ``Polhavet'' flagship project 2020, the Isaac Newton Trust, and Newnham College, Cambridge, UK.
+\end{acknowledgments}
 
 % Define the bibliography file to be used
 \bibliography{bibtex/bib/IEEEabrv, bibtex/bib/imrolland}
