Fixed underscore in doi compilation error

--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -234,7 +234,6 @@ year={2021},
 url={https://arxiv.org/abs/2105.03682},
 archivePrefix={arXiv},
 eprint={2105.03682},
-timestamp={Fri, 14 May 2021 12:13:30 +0200},
 biburl={https://dblp.org/rec/journals/corr/abs-2105-03682.bib},
 bibsource={dblp computer science bibliography, https://dblp.org}
 }
@@ -249,8 +248,7 @@ pages={50-80},
 year={2004},
 doi={10.1518/hfes.46.1.50\_30392},
 note={PMID: 15151155},
-URL={https://doi.org/10.1518/hfes.46.1.50_30392},
-eprint={https://doi.org/10.1518/hfes.46.1.50_30392}
+URL={https://doi.org/10.1518/hfes.46.1.50\_30392},
 }
 
 @article{Chi2016,
