Fixed underscore in doi.

--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -86,13 +86,6 @@
   year={2021}
 }
 
-% this entry makes the references appear with et al. in the full references if there are more than 6 authors
-@IEEEtranBSTCTL{IEEEexample:BSTcontrol,
-  CTLuse_forced_etal       = "yes",
-  CTLmax_names_forced_etal = "6",
-  CTLnames_show_etal       = "6" 
-}
-
 @misc{Abadi2015,
 title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
 url={https://www.tensorflow.org/},
@@ -172,7 +165,7 @@ month = {06--11 Aug}
 
 @ARTICLE{Chlaily2021,
 author={Chlaily, Saloua and Mura, Mauro Dalla and Chanussot, Jocelyn and Jutten, Christian and Gamba, Paolo and Marinoni, Andrea},
-journal={IEEE Transactions on Geoscience and Remote Sensing},
+journal={IEEE Trans. Geosci. Remote Sens.},
 title={Capacity and Limits of Multimodal Remote Sensing: Theoretical Aspects and Automatic Information Theory-Based Image Selection},
 year={2021},
 volume={59},
@@ -202,9 +195,8 @@ volume={46},
 number={1},
 pages={50-80},
 year={2004},
-doi={10.1518/hfes.46.1.50\_30392},
-note={PMID: 15151155},
-URL={https://doi.org/10.1518/hfes.46.1.50\_30392},
+doi={10.1518/hfes.46.1.50_30392},
+URL={{https://doi.org/10.1518/hfes.46.1.50\_30392}},
 }
 
 @article{Chi2016,
@@ -218,11 +210,13 @@ year={2016},
 publisher={IEEE}
 }
 
-@inproceedings{Chakraborty2017,
+@INPROCEEDINGS{Chakraborty2017,
+author={Chakraborty, Supriyoi and others},
+booktitle={IEEE Smart World Congr. DAIS - Work. Distrib. Anal. Infrastruct. Algorithms Multi-Organization Fed.},
 title={Interpretability of deep learning models: A survey of results},
-author={Chakraborty, Supriyo and Tomsett, Richard and Raghavendra, Ramya and Harborne, Daniel and Alzantot, Moustafa and Cerutti, Federico and Srivastava, Mani and Preece, Alun and Julier, Simon and Rao, Raghuveer M and others},
-booktitle={2017 IEEE smartworld, ubiquitous intelligence \& computing, advanced \& trusted computed, scalable computing \& communications, cloud \& big data computing, Internet of people and smart city innovation (smartworld/SCALCOM/UIC/ATC/CBDcom/IOP/SCI)},
-pages={1--6},
 year={2017},
-organization={IEEE}
+volume={},
+number={},
+pages={1-6},
+doi={10.1109/UIC-ATC.2017.8397411},
 }
